--- a/src/创建型/12-简化原型模式/12-简化原型模式.csproj
+++ b/src/创建型/12-简化原型模式/12-简化原型模式.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <RootNamespace>_12_简化原型模式</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
